Lab4/Lab/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI
    8       | Specifier error SEMI
    9       | error Specifier SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | ID LP error RP
   25       | error LP VarList RP
   26       | error LP RP

   27 VarList: ParamDec COMMA VarList
   28        | ParamDec

   29 ParamDec: Specifier VarDec

   30 CompSt: LC DefList StmtList RC

   31 StmtList: Stmt StmtList
   32         | %empty

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | WHILE LP Exp RP Stmt
   39     | error SEMI
   40     | Exp error SEMI
   41     | RETURN Exp error
   42     | RETURN error SEMI

   43 DefList: Def DefList
   44        | %empty

   45 Def: Specifier DecList SEMI
   46    | Specifier error SEMI
   47    | Specifier DecList error

   48 DecList: Dec
   49        | Dec COMMA DecList

   50 Dec: VarDec
   51    | VarDec ASSIGNOP Exp

   52 Exp: Exp ASSIGNOP Exp
   53    | Exp AND Exp
   54    | Exp OR Exp
   55    | Exp RELOP Exp
   56    | Exp PLUS Exp
   57    | Exp MINUS Exp
   58    | Exp STAR Exp
   59    | Exp DIV Exp
   60    | LP Exp RP
   61    | MINUS Exp
   62    | NOT Exp
   63    | ID LP Args RP
   64    | ID LP RP
   65    | Exp LB Exp RB
   66    | Exp DOT ID
   67    | ID
   68    | INT
   69    | FLOAT
   70    | Exp ASSIGNOP error
   71    | Exp AND error
   72    | Exp OR error
   73    | Exp RELOP error
   74    | Exp PLUS error
   75    | Exp MINUS error
   76    | Exp STAR error
   77    | Exp DIV error
   78    | LP error RP
   79    | MINUS error
   80    | NOT error
   81    | ID LP error RP
   82    | Exp LB error RB

   83 Args: Exp COMMA Args
   84     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 9 21 24 25 26 39 40 41 42 46 47 70 71 72 73 74 75 76
    77 78 79 80 81 82
INT (258) 20 68
FLOAT (259) 69
ID (260) 16 18 19 22 23 24 63 64 66 67 81
SEMI (261) 4 5 7 8 9 33 35 39 40 42 45 46
COMMA (262) 11 27 49 83
ASSIGNOP (263) 51 52 70
RELOP (264) 55 73
PLUS (265) 56 74
MINUS (266) 57 61 75 79
STAR (267) 58 76
DIV (268) 59 77
AND (269) 53 71
OR (270) 54 72
DOT (271) 66
NOT (272) 62 80
TYPE (273) 12
LP (274) 22 23 24 25 26 36 37 38 60 63 64 78 81
RP (275) 22 23 24 25 26 36 37 38 60 63 64 78 81
LB (276) 20 21 65 82
RB (277) 20 21 65 82
LC (278) 14 30
RC (279) 14 30
STRUCT (280) 14 15
RETURN (281) 35 41 42
IF (282) 36 37
ELSE (283) 37
WHILE (284) 38
NEG (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8 9, on right: 2
ExtDecList (36)
    on left: 10 11, on right: 4 11
Specifier (37)
    on left: 12 13, on right: 4 5 6 8 9 29 45 46 47
StructSpecifier (38)
    on left: 14 15, on right: 13
OptTag (39)
    on left: 16 17, on right: 14
Tag (40)
    on left: 18, on right: 15
VarDec (41)
    on left: 19 20 21, on right: 10 11 20 21 29 50 51
FunDec (42)
    on left: 22 23 24 25 26, on right: 6
VarList (43)
    on left: 27 28, on right: 22 25 27
ParamDec (44)
    on left: 29, on right: 27 28
CompSt (45)
    on left: 30, on right: 6 34
StmtList (46)
    on left: 31 32, on right: 30 31
Stmt (47)
    on left: 33 34 35 36 37 38 39 40 41 42, on right: 31 36 37 38
DefList (48)
    on left: 43 44, on right: 14 30 43
Def (49)
    on left: 45 46 47, on right: 43
DecList (50)
    on left: 48 49, on right: 45 47 49
Dec (51)
    on left: 50 51, on right: 48 49
Exp (52)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70 71 72 73 74 75 76 77 78 79 80 81 82, on right: 33 35 36 37 38
    40 41 51 52 53 54 55 56 57 58 59 60 61 62 65 66 70 71 72 73 74
    75 76 77 82 83 84
Args (53)
    on left: 83 84, on right: 63 83


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI
    9       | error . Specifier SEMI

    SEMI    shift, and go to state 9
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 10
    StructSpecifier  go to state 8


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag

    ID  shift, and go to state 11

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    8       | Specifier . error SEMI

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

    9 ExtDef: error Specifier . SEMI

    SEMI  shift, and go to state 22


State 11

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 12

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 23


State 13

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 16

    8 ExtDef: Specifier error . SEMI
   25 FunDec: error . LP VarList RP
   26       | error . LP RP

    SEMI  shift, and go to state 24
    LP    shift, and go to state 25


State 17

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP
   24       | ID . LP error RP

    LP  shift, and go to state 26

    $default  reduce using rule 19 (VarDec)


State 18

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 27


State 20

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB

    COMMA  shift, and go to state 28
    LB     shift, and go to state 29

    $default  reduce using rule 10 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 30

    CompSt  go to state 31


State 22

    9 ExtDef: error Specifier SEMI .

    $default  reduce using rule 9 (ExtDef)


State 23

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 33
    Def              go to state 34


State 24

    8 ExtDef: Specifier error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 25

   25 FunDec: error LP . VarList RP
   26       | error LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 35
    STRUCT  shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 37
    ParamDec         go to state 38


State 26

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP
   24       | ID LP . error RP

    error   shift, and go to state 39
    TYPE    shift, and go to state 2
    RP      shift, and go to state 40
    STRUCT  shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 41
    ParamDec         go to state 38


State 27

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 28

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 42

    ExtDecList  go to state 43
    VarDec      go to state 20


State 29

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . error RB

    error  shift, and go to state 44
    INT    shift, and go to state 45


State 30

   30 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 34


State 31

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 32

   45 Def: Specifier . DecList SEMI
   46    | Specifier . error SEMI
   47    | Specifier . DecList error

    error  shift, and go to state 47
    ID     shift, and go to state 42

    VarDec   go to state 48
    DecList  go to state 49
    Dec      go to state 50


State 33

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 51


State 34

   43 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 52
    Def              go to state 34


State 35

   26 FunDec: error LP RP .

    $default  reduce using rule 26 (FunDec)


State 36

   29 ParamDec: Specifier . VarDec

    ID  shift, and go to state 42

    VarDec  go to state 53


State 37

   25 FunDec: error LP VarList . RP

    RP  shift, and go to state 54


State 38

   27 VarList: ParamDec . COMMA VarList
   28        | ParamDec .

    COMMA  shift, and go to state 55

    $default  reduce using rule 28 (VarList)


State 39

   24 FunDec: ID LP error . RP

    RP  shift, and go to state 56


State 40

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 41

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 57


State 42

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 43

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 44

   21 VarDec: VarDec LB error . RB

    RB  shift, and go to state 58


State 45

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 59


State 46

   30 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    ID      shift, and go to state 63
    MINUS   shift, and go to state 64
    NOT     shift, and go to state 65
    LP      shift, and go to state 66
    LC      shift, and go to state 30
    RETURN  shift, and go to state 67
    IF      shift, and go to state 68
    WHILE   shift, and go to state 69

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 70
    StmtList  go to state 71
    Stmt      go to state 72
    Exp       go to state 73


State 47

   46 Def: Specifier error . SEMI

    SEMI  shift, and go to state 74


State 48

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   50 Dec: VarDec .
   51    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 75
    LB        shift, and go to state 29

    $default  reduce using rule 50 (Dec)


State 49

   45 Def: Specifier DecList . SEMI
   47    | Specifier DecList . error

    error  shift, and go to state 76
    SEMI   shift, and go to state 77


State 50

   48 DecList: Dec .
   49        | Dec . COMMA DecList

    COMMA  shift, and go to state 78

    $default  reduce using rule 48 (DecList)


State 51

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 52

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


State 53

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   29 ParamDec: Specifier VarDec .

    LB  shift, and go to state 29

    $default  reduce using rule 29 (ParamDec)


State 54

   25 FunDec: error LP VarList RP .

    $default  reduce using rule 25 (FunDec)


State 55

   27 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 79
    ParamDec         go to state 38


State 56

   24 FunDec: ID LP error RP .

    $default  reduce using rule 24 (FunDec)


State 57

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 58

   21 VarDec: VarDec LB error RB .

    $default  reduce using rule 21 (VarDec)


State 59

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 60

   39 Stmt: error . SEMI

    SEMI  shift, and go to state 80


State 61

   68 Exp: INT .

    $default  reduce using rule 68 (Exp)


State 62

   69 Exp: FLOAT .

    $default  reduce using rule 69 (Exp)


State 63

   63 Exp: ID . LP Args RP
   64    | ID . LP RP
   67    | ID .
   81    | ID . LP error RP

    LP  shift, and go to state 81

    $default  reduce using rule 67 (Exp)


State 64

   61 Exp: MINUS . Exp
   79    | MINUS . error

    error  shift, and go to state 82
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 83


State 65

   62 Exp: NOT . Exp
   80    | NOT . error

    error  shift, and go to state 84
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 85


State 66

   60 Exp: LP . Exp RP
   78    | LP . error RP

    error  shift, and go to state 86
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 87


State 67

   35 Stmt: RETURN . Exp SEMI
   41     | RETURN . Exp error
   42     | RETURN . error SEMI

    error  shift, and go to state 88
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 89


State 68

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 90


State 69

   38 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 91


State 70

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 71

   30 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 92


State 72

   31 StmtList: Stmt . StmtList

    error   shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    ID      shift, and go to state 63
    MINUS   shift, and go to state 64
    NOT     shift, and go to state 65
    LP      shift, and go to state 66
    LC      shift, and go to state 30
    RETURN  shift, and go to state 67
    IF      shift, and go to state 68
    WHILE   shift, and go to state 69

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 70
    StmtList  go to state 93
    Stmt      go to state 72
    Exp       go to state 73


State 73

   33 Stmt: Exp . SEMI
   40     | Exp . error SEMI
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . ASSIGNOP error
   71    | Exp . AND error
   72    | Exp . OR error
   73    | Exp . RELOP error
   74    | Exp . PLUS error
   75    | Exp . MINUS error
   76    | Exp . STAR error
   77    | Exp . DIV error
   82    | Exp . LB error RB

    error     shift, and go to state 94
    SEMI      shift, and go to state 95
    ASSIGNOP  shift, and go to state 96
    RELOP     shift, and go to state 97
    PLUS      shift, and go to state 98
    MINUS     shift, and go to state 99
    STAR      shift, and go to state 100
    DIV       shift, and go to state 101
    AND       shift, and go to state 102
    OR        shift, and go to state 103
    DOT       shift, and go to state 104
    LB        shift, and go to state 105


State 74

   46 Def: Specifier error SEMI .

    $default  reduce using rule 46 (Def)


State 75

   51 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 106


State 76

   47 Def: Specifier DecList error .

    $default  reduce using rule 47 (Def)


State 77

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


State 78

   49 DecList: Dec COMMA . DecList

    ID  shift, and go to state 42

    VarDec   go to state 48
    DecList  go to state 107
    Dec      go to state 50


State 79

   27 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 27 (VarList)


State 80

   39 Stmt: error SEMI .

    $default  reduce using rule 39 (Stmt)


State 81

   63 Exp: ID LP . Args RP
   64    | ID LP . RP
   81    | ID LP . error RP

    error  shift, and go to state 108
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66
    RP     shift, and go to state 109

    Exp   go to state 110
    Args  go to state 111


State 82

   79 Exp: MINUS error .

    $default  reduce using rule 79 (Exp)


State 83

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   61    | MINUS Exp .
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . ASSIGNOP error
   71    | Exp . AND error
   72    | Exp . OR error
   73    | Exp . RELOP error
   74    | Exp . PLUS error
   75    | Exp . MINUS error
   76    | Exp . STAR error
   77    | Exp . DIV error
   82    | Exp . LB error RB

    DOT  shift, and go to state 104
    LB   shift, and go to state 105

    $default  reduce using rule 61 (Exp)


State 84

   80 Exp: NOT error .

    $default  reduce using rule 80 (Exp)


State 85

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   62    | NOT Exp .
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . ASSIGNOP error
   71    | Exp . AND error
   72    | Exp . OR error
   73    | Exp . RELOP error
   74    | Exp . PLUS error
   75    | Exp . MINUS error
   76    | Exp . STAR error
   77    | Exp . DIV error
   82    | Exp . LB error RB

    DOT  shift, and go to state 104
    LB   shift, and go to state 105

    $default  reduce using rule 62 (Exp)


State 86

   78 Exp: LP error . RP

    RP  shift, and go to state 112


State 87

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   60    | LP Exp . RP
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . ASSIGNOP error
   71    | Exp . AND error
   72    | Exp . OR error
   73    | Exp . RELOP error
   74    | Exp . PLUS error
   75    | Exp . MINUS error
   76    | Exp . STAR error
   77    | Exp . DIV error
   82    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 96
    RELOP     shift, and go to state 97
    PLUS      shift, and go to state 98
    MINUS     shift, and go to state 99
    STAR      shift, and go to state 100
    DIV       shift, and go to state 101
    AND       shift, and go to state 102
    OR        shift, and go to state 103
    DOT       shift, and go to state 104
    RP        shift, and go to state 113
    LB        shift, and go to state 105


State 88

   42 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 114


State 89

   35 Stmt: RETURN Exp . SEMI
   41     | RETURN Exp . error
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . ASSIGNOP error
   71    | Exp . AND error
   72    | Exp . OR error
   73    | Exp . RELOP error
   74    | Exp . PLUS error
   75    | Exp . MINUS error
   76    | Exp . STAR error
   77    | Exp . DIV error
   82    | Exp . LB error RB

    error     shift, and go to state 115
    SEMI      shift, and go to state 116
    ASSIGNOP  shift, and go to state 96
    RELOP     shift, and go to state 97
    PLUS      shift, and go to state 98
    MINUS     shift, and go to state 99
    STAR      shift, and go to state 100
    DIV       shift, and go to state 101
    AND       shift, and go to state 102
    OR        shift, and go to state 103
    DOT       shift, and go to state 104
    LB        shift, and go to state 105


State 90

   36 Stmt: IF LP . Exp RP Stmt
   37     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 117


State 91

   38 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 118


State 92

   30 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 30 (CompSt)


State 93

   31 StmtList: Stmt StmtList .

    $default  reduce using rule 31 (StmtList)


State 94

   40 Stmt: Exp error . SEMI

    SEMI  shift, and go to state 119


State 95

   33 Stmt: Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 96

   52 Exp: Exp ASSIGNOP . Exp
   70    | Exp ASSIGNOP . error

    error  shift, and go to state 120
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 121


State 97

   55 Exp: Exp RELOP . Exp
   73    | Exp RELOP . error

    error  shift, and go to state 122
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 123


State 98

   56 Exp: Exp PLUS . Exp
   74    | Exp PLUS . error

    error  shift, and go to state 124
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 125


State 99

   57 Exp: Exp MINUS . Exp
   75    | Exp MINUS . error

    error  shift, and go to state 126
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 127


State 100

   58 Exp: Exp STAR . Exp
   76    | Exp STAR . error

    error  shift, and go to state 128
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 129


State 101

   59 Exp: Exp DIV . Exp
   77    | Exp DIV . error

    error  shift, and go to state 130
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 131


State 102

   53 Exp: Exp AND . Exp
   71    | Exp AND . error

    error  shift, and go to state 132
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 133


State 103

   54 Exp: Exp OR . Exp
   72    | Exp OR . error

    error  shift, and go to state 134
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 135


State 104

   66 Exp: Exp DOT . ID

    ID  shift, and go to state 136


State 105

   65 Exp: Exp LB . Exp RB
   82    | Exp LB . error RB

    error  shift, and go to state 137
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 138


State 106

   51 Dec: VarDec ASSIGNOP Exp .
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . ASSIGNOP error
   71    | Exp . AND error
   72    | Exp . OR error
   73    | Exp . RELOP error
   74    | Exp . PLUS error
   75    | Exp . MINUS error
   76    | Exp . STAR error
   77    | Exp . DIV error
   82    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 96
    RELOP     shift, and go to state 97
    PLUS      shift, and go to state 98
    MINUS     shift, and go to state 99
    STAR      shift, and go to state 100
    DIV       shift, and go to state 101
    AND       shift, and go to state 102
    OR        shift, and go to state 103
    DOT       shift, and go to state 104
    LB        shift, and go to state 105

    $default  reduce using rule 51 (Dec)


State 107

   49 DecList: Dec COMMA DecList .

    $default  reduce using rule 49 (DecList)


State 108

   81 Exp: ID LP error . RP

    RP  shift, and go to state 139


State 109

   64 Exp: ID LP RP .

    $default  reduce using rule 64 (Exp)


State 110

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . ASSIGNOP error
   71    | Exp . AND error
   72    | Exp . OR error
   73    | Exp . RELOP error
   74    | Exp . PLUS error
   75    | Exp . MINUS error
   76    | Exp . STAR error
   77    | Exp . DIV error
   82    | Exp . LB error RB
   83 Args: Exp . COMMA Args
   84     | Exp .

    COMMA     shift, and go to state 140
    ASSIGNOP  shift, and go to state 96
    RELOP     shift, and go to state 97
    PLUS      shift, and go to state 98
    MINUS     shift, and go to state 99
    STAR      shift, and go to state 100
    DIV       shift, and go to state 101
    AND       shift, and go to state 102
    OR        shift, and go to state 103
    DOT       shift, and go to state 104
    LB        shift, and go to state 105

    $default  reduce using rule 84 (Args)


State 111

   63 Exp: ID LP Args . RP

    RP  shift, and go to state 141


State 112

   78 Exp: LP error RP .

    $default  reduce using rule 78 (Exp)


State 113

   60 Exp: LP Exp RP .

    $default  reduce using rule 60 (Exp)


State 114

   42 Stmt: RETURN error SEMI .

    $default  reduce using rule 42 (Stmt)


State 115

   41 Stmt: RETURN Exp error .

    $default  reduce using rule 41 (Stmt)


State 116

   35 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 35 (Stmt)


State 117

   36 Stmt: IF LP Exp . RP Stmt
   37     | IF LP Exp . RP Stmt ELSE Stmt
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . ASSIGNOP error
   71    | Exp . AND error
   72    | Exp . OR error
   73    | Exp . RELOP error
   74    | Exp . PLUS error
   75    | Exp . MINUS error
   76    | Exp . STAR error
   77    | Exp . DIV error
   82    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 96
    RELOP     shift, and go to state 97
    PLUS      shift, and go to state 98
    MINUS     shift, and go to state 99
    STAR      shift, and go to state 100
    DIV       shift, and go to state 101
    AND       shift, and go to state 102
    OR        shift, and go to state 103
    DOT       shift, and go to state 104
    RP        shift, and go to state 142
    LB        shift, and go to state 105


State 118
